# doorsys-api

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-image.yml
.sqlx/: query-067301c9b01f19cf28c7de4f33cc2acd089b373436b0ff3c42e95e91182f0383.json  query-13fc668d7d37ef07b3d40ecd1953e6f492f09a92881280f6bb9933be3a155eea.json  query-23b681930b28ffc05a0b1605a868f1f2ee7b432fef810b69fbcff59c3086de5d.json  query-5721d6a23bd4d3e835c0bb629e7b377775aec67f85b32a9a72fb07f94335b7c4.json  query-58e2fb2aa086113a99fbff50ea88a934145b83bf97cc35cc6033a9de380bfa1e.json  query-9604d7bd53755e0acfbc5c6cf3eeeb86e855c4bd4099ea26b9d0dfbdc915a63a.json  query-b6f10997aaa567e4ec66d0e6f537a21fd3c58cc450b4c31ffeebaa96cafa321b.json  query-c0737252198d94a37310b996c3f0c95290e39aa80d917b743e2c22875260bf89.json  query-dcdc55b1eab09537d2dd3d6a0a690ba4393fa04896374d9f5b21e92e53d9a51a.json
migrations/: 011_deleted_staff.sql
src/: logging.rs  main.rs  mqtt.rs
src/domain/: entry_log.rs  staff.rs
src/http/: customer_handler.rs  mod.rs  staff_handler.rs
